--- a/echostore/pubspec.yaml
+++ b/echostore/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  url_launcher: ^6.1.10
+  flutter_linkify: ^5.0.2
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
