--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.ecommerce_test">
+        package="com.example.echo_project">
    <application
-        android:label="ecommerce_test"
+        android:label="echo_project"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
