--- a/echostore/pubspec.yaml
+++ b/echostore/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   url_launcher: ^6.1.10
   flutter_linkify: ^5.0.2
   http: ^0.13.5
+  dio: ^5.1.1
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +50,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  test: ^1.23.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
